# Robosub-MissionControl

./: .gitignore  CMakeLists.txt  README.md
controller/: CMakeLists.txt  controller  controller.cpp
controller/images/: controller.xcf
controller/src/: controller  controller.cpp
images/: nocontroller.xcf
include/: controller.h  main.h  robotState.h
src/: controller.cpp  main.cpp  network.cpp  readout.cpp  robotState.cpp  server.cpp  video.cpp
src/cvplot/: figure.cc
ui/: bower.json
ui/src/: app-telemetry.html
ui/src/elements/: graph-controller.html  graph-line.html  graph-log.html  graph-multiline.html  graph-robot.html  mdi.html
